# rnvm

./: Cargo.toml  Cross.toml  LICENSE  README.md  install.sh
.github/workflows/: build.yml
src/: cli.rs  errors.rs  installer.rs  list.rs  main.rs  uninstall.rs  upgrade.rs  utils.rs  version.rs
src/config/: alias.rs  local.rs  mod.rs
src/installer/: download.rs  extract.rs  mod.rs
src/version/: compare.rs  local.rs  mod.rs  remote.rs
