[package]
name = "runode"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
env_logger = "0.9"
zip = "2.2.2"
flate2 = "1.0.35"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
