[package]
name = "rnvm"
version = "0.1.0"
edition = "2021"
authors = ["Oleksandr Zhyhalo"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
env_logger = "0.9"
zip = "2.2.2"
flate2 = "1.0.35"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0.11"
tempfile = "3.16.0"
colored = "3.0.0"
futures-util = "0.3.31"
indicatif = "0.17.11"